# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter.yml  test.yml
gendiff/: parser.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_file1_file2.py
gendiff/tests/fixtures/: corr_answer_file2_first.yml  correct_answer_file2_first.json
