[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["StasyMo <anmolodtsova@mail.ru>"]
repository = "https://github.com/StasyMo/python-project-lvl2"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
test_file1_file2 = "gendiff.tests.test_file1_file2:main"